@@ -1,3 +1,9 @@
+2004-06-02  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/policytest.c:
+	    Fixed the rate-tracker to function again.
+	    For a while the rate tracker responses were just ignored...
+
 2004-05-23  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/subdaemons.c:
